--- a/CX/index.html
+++ b/CX/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.ddf3d04d.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.b2ab589d.js">
-    <link rel="stylesheet" href="/assets/index.35d85b7b.css">
+    <script type="module" crossorigin src="assets/index.ddf3d04d.js"></script>
+    <link rel="modulepreload" href="assets/vendor.b2ab589d.js">
+    <link rel="stylesheet" href="assets/index.35d85b7b.css">
   </head>
   <body>
     <div id="root"></div>
