--- a/wei/index.html
+++ b/wei/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>To 阿伟</title>
     <script type="module" crossorigin src="assets/index.5478ad73.js"></script>
     <link rel="modulepreload" href="assets/vendor.0dfd9c6f.js">
     <link rel="stylesheet" href="assets/index.6286acd4.css">
