--- a/wei/index.html
+++ b/wei/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To 阿伟</title>
+    <title>To 阿伟 :man: </title>
     <script type="module" crossorigin src="assets/index.2e383a0d.js"></script>
     <link rel="modulepreload" href="assets/vendor.0dfd9c6f.js">
     <link rel="stylesheet" href="assets/index.01e1090b.css">
