--- a/CX/index.html
+++ b/CX/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>♥️ 搞定关于大姨妈的一切</title>
+    <title>搞定关于大妈的一切</title>
     <script type="module" crossorigin src="assets/index.eb0dc895.js"></script>
     <link rel="modulepreload" href="assets/vendor.7145ecdf.js">
     <link rel="stylesheet" href="assets/index.218ca3c9.css">
